# formo-library-ecosystem

./: .gitignore  AI_NATIVE_RULES.md  Cargo.toml  MIGRATION_STATUS.md  README.md  mandatory-features.formo-ai.json  registry.formo-ai.json
ai-interop/: README.md
ai-interop/contracts/: CAPABILITIES.json  README.md
ai-interop/docs/: FEATURES.md  README.md
ai-interop/examples/: README.md  error-envelope.json
ai-interop/specs/: README.md
knowledge-pack/: README.md
knowledge-pack/contracts/: CAPABILITIES.json  README.md
knowledge-pack/docs/: 00-quickstart.md  01-formo-language-reference.md  02-formo-style-reference.md  03-cli-build-runtime.md  04-programming-techniques.md  05-troubleshooting-diagnostics.md  06-ai-playbook.md  07-learning-path.md  08-project-architecture.md  09-quality-gates.md  FEATURES.md  README.md
knowledge-pack/examples/: README.md  ai-prompts.md  case-studies.md  glossary.md  integration-checklist.md
knowledge-pack/specs/: README.md
language-core/: README.md
language-core/contracts/: CAPABILITIES.json  README.md
language-core/docs/: FEATURES.md  README.md
language-core/examples/: README.md  app-controller.fl  app-main.fm  component-header.fm  desktop-adapter.fl  session-service.fl  web-adapter.fl
language-core/programs/formo-parser/fuzz/: Cargo.toml  README.md
language-core/programs/formo-parser/fuzz/corpus/parser_parse/: seed_mismatch.fm  seed_nested.fm  seed_valid.fm
language-core/programs/formo-parser/fuzz/fuzz_targets/: parser_parse.rs
language-core/specs/: README.md
language-style/: README.md
language-style/contracts/: CAPABILITIES.json  README.md
language-style/docs/: FEATURES.md  README.md
language-style/examples/: README.md  base.fs
language-style/specs/: README.md
runtime-desktop/: README.md
runtime-desktop/contracts/: CAPABILITIES.json  (+1 more)
runtime-web/: README.md
tooling/: README.md
tooling/programs/formo-cli/: Cargo.toml
tooling/programs/formo-cli/src/: args.rs  benchmark.rs  diagnose.rs  doctor.rs  engine_bridge.rs  error.rs  fmt_cmd.rs  json_output.rs  lsp_bridge.rs  lsp_output.rs  main.rs  output.rs  pipeline.rs  term.rs  watch.rs
tooling/programs/formo-cli/src/lowering/: attrs.rs  component.rs  mod.rs  node.rs  slot.rs  style.rs  values.rs
tooling/programs/formo-cli/tests/: cli_integration.rs
tooling/programs/formo-cli/tests/cli_integration/: build.rs  check_json.rs  diagnose.rs  quality.rs  support.rs
(+119 files in other folders)
